--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
     	<title>Map functionality test</title>
-    	<script src="jquery-2.2.0.min.js"></script>
+    	<script src="js/lib/jquery-2.2.0.min.js"></script>
   	</head>
   	<body>
   		<canvas id="map" width="640px" height="640px" style="background-image: url('images/dirt.png');"></canvas>
