Added the missing character encoding to the HTML file.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
     	<title>Map functionality test</title>
   	</head>
   	<body>
