--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
-
+<!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Homesteading Game Thingy</title>
     <script src="jquery-1.12.0.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="reset.css"/>
