--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
     	<meta charset="utf-8">
     	<title>Homesteading Game Thingy</title>
-    	<script src="jquery-1.12.0.min.js"></script>
     	<link rel="stylesheet" type="text/css" media="screen" href="reset.css"/>
     	<link rel="stylesheet" type="text/css" media="screen" href="hg.css"/>
   	</head>
@@ -33,6 +32,7 @@
         	</div>
   		</div>
 	</div>
+	<script src="js/lib/jquery-2.2.2.0.min.js"></script>
     <script src="homesteadingGame.js"></script>
 	</body>
 </html>
