Moved all CSS to the css directory.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
     	<meta charset="utf-8">
     	<title>Homesteading Game Thingy</title>
-    	<link rel="stylesheet" type="text/css" media="screen" href="reset.css"/>
-    	<link rel="stylesheet" type="text/css" media="screen" href="hg.css"/>
+    	<link rel="stylesheet" href="css/reset.css">
+    	<link rel="stylesheet" href="css/hg.css">
   	</head>
   	<body>
     	<div id="container">
