Moved all remaining JavaScript to the js directory.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   		</div>
 	</div>
 	<script src="js/lib/jquery-2.2.0.min.js"></script>
-    <script src="homesteadingGame.js"></script>
+    <script src="js/homestead.js"></script>
 	</body>
 </html>
