Renamed hg.css to homestead.css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     	<meta charset="utf-8">
     	<title>Homestead.js</title>
     	<link rel="stylesheet" href="css/reset.css">
-    	<link rel="stylesheet" href="css/hg.css">
+    	<link rel="stylesheet" href="css/homestead.css">
   	</head>
   	<body>
     	<div id="container">
 	      	<div id="controls">
 	        	<div id="stats">
 	          	<span id="name"></span>
-	          	<span id="money"></span> <br/>
+	          	<span id="money"></span>
+	          	<br>
 	          	<span id="turn"></span>
 	    	</div>
 	        <div id="newFarm">
