--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
   	</head>
   	<body>
     	<div id="container">
-	      	<div id="controls">
-	        	<div id="stats">
-	          	<span id="name"></span>
-	          	<span id="money"></span>
-	          	<br>
-	          	<span id="turn"></span>
-	    	</div>
-	        <div id="newFarm">
-				<form onsubmit="return false;">
-	            	<label for="newName"><h2> Name your new farm!</h2></label> <br/>
-	              	<input id="newName" name="newName"/> <br/>
-	            	<button id="createNewFarm" type="submit">Start New Farm</button>
-	          	</form>
-	        </div>
-	    	<div id="invo">
-	      		<h2>Inventory</h2>
-	      		<ul id="invoList"></ul>
-	    	</div>
-				<button id="scaleUp"> + </button><br/>
-				<button id="scaleDown"> - </button>
-		</div>
+	    	<div id="controls">
+					
+	      	<div id="stats">
+	        	<span id="name"></span>
+	          <span id="money"></span><br>
+	          <span id="turn"></span>
+					</div>
+
+		      <div id="newFarm">
+						<form onsubmit="return false;">
+							<label for="newName"><h2> Name your new farm!</h2></label> <br/>
+		          	<input id="newName" name="newName"/> <br/>
+		          <button id="createNewFarm" type="submit">Start New Farm</button>
+		        </form>
+		      </div>
+
+		    	<div id="invo">
+		      		<h2>Inventory</h2>
+		      		<ul id="invoList"></ul>
+		    	</div>
+
+					<button id="scaleUp"> + </button><br/>
+					<button id="scaleDown"> - </button>
+				</div>
 		<div id="view">
         	<div id="farm">
       			<canvas id="map" height="640px" width="640px"></canvas>
